# bookstore

./: Dockerfile  Makefile  README.md  db.sqlite3  docker-compose.yml  env.dev  pyproject.toml  requirements.txt
.github/workflows/: build.yml  workflow-pr.yml
bookstore/: settings.py  urls.py  urls.py.backup  views.py
order/: urls.py  views.py
order/migrations/: 0001_initial.py  0002_alter_order_options.py
order/models/: order.py
order/serializers/: order_serializer.py
order/tests/: test_order_viewset.py
order/tests/test_serializers/: test_order_serializer.py
order/tests/test_viewset/: test_order_viewset.py
order/viewsets/: order_viewset.py
product/: urls.py
product/migrations/: 0001_initial.py  0002_rename_categories_product_category_and_more.py
product/serializers/: category_serializer.py
product/tests/test_viewset/: test_product.viewset.py
product/tests/test_viewsets/: test_category_viewset.py  test_product_viewset.py
product/viewsets/: product_viewset.py
staticfiles/admin/css/: base.css  dark_mode.css  forms.css  responsive.css  responsive_rtl.css  rtl.css  widgets.css
staticfiles/admin/js/: SelectFilter2.js  inlines.js
staticfiles/admin/js/admin/: RelatedObjectLookups.js
